Bug 72027 - Patch to mute warnings for tools in Ubuntu
Summary: Patch to mute warnings for tools in Ubuntu
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium trivial
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-26 10:38 UTC by Kirill Müller
Modified: 2013-11-26 10:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch (1.33 KB, patch)
2013-11-26 10:39 UTC, Kirill Müller
no flags Details | Splinter Review

Description Kirill Müller 2013-11-26 10:38:41 UTC
Trivial casts to void.
Comment 1 Kirill Müller 2013-11-26 10:39:03 UTC
Created attachment 89824 [details] [review]
Patch
Comment 2 Chris Wilson 2013-11-26 10:53:23 UTC
I just tweaked the patch to throw in some whitespace as well.

commit 80d1dee70ba3bdf38e0dd68a39380f4f3d9f22b5
Author: Kirill Müller <kirill.mueller@ivt.baug.ethz.ch>
Date:   Tue Nov 26 11:36:54 2013 +0100

    intel-virtual-output: mute spurious warnings
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=72027

Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.