intel-virtual-output: mute spurious warnings

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=72027